--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,13 @@ jobs:
         arduino-cli core update-index --additional-urls https://arduino.esp8266.com/stable/package_esp8266com_index.json
         arduino-cli core install esp8266:esp8266 --additional-urls https://arduino.esp8266.com/stable/package_esp8266com_index.json
 
+    - name: Install dependencies
+      run: |
+        arduino-cli lib install "ESP8266WiFi"
+        arduino-cli lib install "ESP8266WebServer"
+        arduino-cli lib install "DNSServer"
+        arduino-cli lib install "LittleFS"
+
     - name: List repository contents
       run: |
         echo "Repository root contents:"
@@ -50,11 +57,12 @@ jobs:
         fi
         SKETCH_DIR=$(dirname "$SKETCH_FILE")
         echo "Full path of sketch file: $SKETCH_FILE"
-        echo "Sketch directory: $SKETCH_DIR"
-        echo "Contents of sketch file: (skipped)"
-        # cat "$SKETCH_FILE"
-        echo "Compiling sketch: $SKETCH_FILE"
-        arduino-cli compile --fqbn esp8266:esp8266:d1_mini --build-property "build.extra_flags=-DESP8266" $SKETCH_FILE --output-dir ./
+        arduino-cli compile --fqbn esp8266:esp8266:generic $SKETCH_FILE
+
+    - name: Upload firmware (optional)
+      if: github.event_name == 'workflow_dispatch'
+      run: |
+        arduino-cli upload -p /dev/ttyUSB0 --fqbn esp8266:esp8266:generic $SKETCH_FILE
 
     - name: Rename output file for ESP8266
       run: |
